# confessions-bot

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: build.yaml
src/: button_stats.rs  config.rs  logging.rs  main.rs  utils.rs
src/commands/: add_category.rs  blacklist.rs  buttonstats.rs  confess.rs  confessembed.rs  list_categories.rs  mod.rs  remove_category.rs  review_confession.rs  set_confession_thread.rs  set_cooldown.rs
