[package]
name = "confessions-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0"
chrono = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
log4rs = "1"
log = "0"
sha2 = "0"

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
branch = "current"
features = ["collector"]

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = "fat"
strip = true
strip-paths = true
